# kqpr

./: .gitignore  Cargo.toml  README.md  TODO.md
res/: style.css  ui.glade
src/: main.rs  ui.glade
tests/: generate.py
tests/data/: Passwords.kdbx
