[package]
name = "kqpr"
description = "QR codes for KeePass databases"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
homepage = "https://github.com/senier/kqpr"
repository = "https://github.com/senier/kqpr"
keywords = ["QR", "keepass", "KDBX", "wifi"]

include = [
   "src/*.rs",
   "res/icon.svg",
   "res/style.css",
   "res/ui.glade",
   "Cargo.toml",
   "doc/2021-12-24_screenshot.png",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.*"
gdk = "0.14.*"
glib = "0.14.*"
keepass = "0.4.9"
qrcode = "0.12.0"
home = "0.5.3"
